<resources>
    <string name="LanguageName">English</string>
    <string name="AppName">Social IM for Telegram</string>
    <string name="AppNameBeta">Social IM for Telegram</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Phone verification</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.</string>
    <string name="SentAppCode">We\'ve sent the code to the <![CDATA[<b>]]>Social IM for Telegram<![CDATA[</b>]]> app on your other device.</string>
    <string name="SentCallCode">We\'ve sent an activation call to your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]>.\n\nDon\'t take it, Social IM for Telegram will process everything automatically.</string>
    <string name="SentCallOnly">We are calling your phone <![CDATA[<b>]]>%1$s<![CDATA[</b>]]> to dictate a code.</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="SmsText">We will send you an SMS in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of Social IM for Telegram, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates Social IM for Telegram, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="SearchMessages">MESSAGES</string>
    <string name="Search">Search</string>
    <string name="MuteNotifications">Mute notifications</string>
    <string name="MuteFor">Mute for %1$s</string>
    <string name="UnmuteNotifications">Unmute</string>
    <string name="WillUnmuteIn">In %1$s</string>
    <string name="MuteDisable">Disable</string>
    <string name="Hashtags">HASHTAGS</string>
    <string name="Recent">RECENT</string>
    <string name="ChatHints">CHATS</string>
    <string name="ChatHintsDelete">Delete %1$s from suggestions?</string>
    <string name="LinkPreview">Link preview</string>
    <string name="Draft">Draft</string>
    <string name="HistoryCleared">History was cleared</string>
    <string name="GroupType">Group Type</string>
    <string name="ChannelType">Channel Type</string>
    <string name="ChannelTypePublic">Public</string>
    <string name="ChannelTypePrivate">Private</string>
    <string name="SetAsAdmin">Promote to admin</string>
    <string name="DescriptionInfoMega">You can provide an optional description for your group.</string>
    <string name="LeaveMega">Leave Group</string>
    <string name="DeleteMega">Delete Group</string>
    <string name="LeaveMegaMenu">Leave group</string>
    <string name="DeleteMegaMenu">Delete group</string>
    <string name="MegaDeleteInfo">You will lose all messages in this group.</string>
    <string name="MegaAdminsInfo">You can add administrators to help you manage your group. Tap and hold to remove them.</string>
    <string name="MegaDeleteAlert">Wait! Deleting this group will remove all members and all messages will be lost. Delete the group anyway?</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="MegaAddedBy">un1 added you to this group</string>
    <string name="MegaLeaveAlert">Are you sure you want to leave the group?</string>
    <string name="GroupUserCantAdd">Sorry, you can\'t add this user to groups.</string>
    <string name="GroupUserAddLimit">Sorry, this group is full.</string>
    <string name="GroupUserLeftError">Sorry, this user decided to leave this group, so you cannot invite them back here.</string>
    <string name="GroupUserCantAdmin">Sorry, too many administrators in this group.</string>
    <string name="GroupUserCantBot">Sorry, too many bots in this group.</string>
    <string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
    <string name="ActionPinnedNoText">un1 pinned a message</string>
    <string name="ActionPinnedPhoto">un1 pinned a photo</string>
    <string name="ActionPinnedVideo">un1 pinned a video</string>
    <string name="ActionPinnedFile">un1 pinned a file</string>
    <string name="ActionPinnedSticker">un1 pinned a sticker</string>
    <string name="ActionPinnedVoice">un1 pinned a voice message</string>
    <string name="ActionPinnedContact">un1 pinned a contact</string>
    <string name="ActionPinnedGeo">un1 pinned a map</string>
    <string name="ActionPinnedGif">un1 pinned a GIF</string>
    <string name="ActionPinnedMusic">un1 pinned a track</string>
    <string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
    <string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
    <string name="NoBlockedGroup">Blocked users are removed from the group and can only come back if invited by an admin. Invite links don\'t work for them.</string>
    <string name="NewChannel">New Channel</string>
    <string name="EnterChannelName">Channel name</string>
    <string name="AddMutual">Add contacts to your channel</string>
    <string name="ChannelUsernameHelp">People can share this link with others and find your channel using Social IM for Telegram search.</string>
    <string name="MegaUsernameHelp">People can share this link with others and find your group using Social IM for Telegram search.</string>
    <string name="ChannelUsernamePlaceholder">link</string>
    <string name="ChannelPrivateLinkHelp">People can join your channel by following this link. You can revoke the link any time.</string>
    <string name="MegaPrivateLinkHelp">People can join your group by following this link. You can revoke the link any time.</string>
    <string name="DescriptionOptionalPlaceholder">Description (optional)</string>
    <string name="DescriptionPlaceholder">Description</string>
    <string name="DescriptionInfo">You can provide an optional description for your channel.</string>
    <string name="ChannelPublic">Public Channel</string>
    <string name="MegaPublic">Public Group</string>
    <string name="ChannelPublicInfo">Public channels can be found in search, anyone can join them.</string>
    <string name="MegaPublicInfo">Public groups can be found in search, chat history is available to everyone and anyone can join.</string>
    <string name="ChannelPrivate">Private Channel</string>
    <string name="MegaPrivate">Private Group</string>
    <string name="ChannelPrivateInfo">Private channels can only be joined via an invite link.</string>
    <string name="MegaPrivateInfo">Private groups can only be joined if you were invited or have an invite link.</string>
    <string name="ChannelLinkTitle">Link</string>
    <string name="ChannelInviteLinkTitle">Invite Link</string>
    <string name="ChannelAddMembers">Add members</string>
    <string name="LeaveChannel">Leave Channel</string>
    <string name="LeaveChannelMenu">Leave channel</string>
    <string name="ChannelSettings">Settings</string>
    <string name="ChannelJoin">JOIN</string>
    <string name="ChannelBroadcast">Broadcast</string>
    <string name="ChannelSilentBroadcast">Silent Broadcast</string>
    <string name="ChannelAlertTitle">What is a Channel?</string>
    <string name="ChannelAlertText">Channels are a new tool for broadcasting your messages to large audiences.</string>
    <string name="ChannelAlertCreate">CREATE CHANNEL</string>
    <string name="LinkInUse">Sorry, this name is already taken.</string>
    <string name="LinkInvalid">Sorry, this name is invalid.</string>
    <string name="LinkInvalidShort">Channel names must have at least 5 characters.</string>
    <string name="LinkInvalidLong">The name must not exceed 32 characters.</string>
    <string name="LinkInvalidStartNumber">Channel names can\'t start with a number.</string>
    <string name="LinkInvalidShortMega">Group names must have at least 5 characters.</string>
    <string name="LinkInvalidStartNumberMega">Group names can\'t start with a number.</string>
    <string name="LinkChecking">Checking name…</string>
    <string name="LinkAvailable">%1$s is available.</string>
    <string name="ChannelMembers">Members</string>
    <string name="ChannelBlockedUsers">Blocked users</string>
    <string name="ChannelAdministrators">Administrators</string>
    <string name="ChannelDelete">Delete Channel</string>
    <string name="ChannelDeleteMenu">Delete channel</string>
    <string name="ChannelDeleteAlert">Wait! Deleting this channel will remove all members and all messages will be lost. Delete the channel anyway?</string>
    <string name="ChannelLeaveAlert">Are you sure you want to leave the channel?</string>
    <string name="ChannelDeleteInfo">You will lose all messages in this channel.</string>
    <string name="ChannelEdit">Edit</string>
    <string name="Cancel">Cancel</string>
    <string name="Send">Send</string>
    <string name="AttachLocation">Location</string>
    <string name="age_group">Age</string>
    <string name="gender">Gender</string>
    <string name="preferences_contant">Lets connect you to the people you always wanted to befriended with! Simply enter your choice below.</string>
    <string name="more_karma">Get More Karmas</string>
    <string name="karma_content">Unlock premium features NOW!</string>
    <string name="karma_content1">Build friendships that last with 20+ profile at just 5 Karmas.</string>
    <string name="karma_content2">Coming soon with Live Stream and View your friends!</string>
    <string name="karma_content3">Unlimited calling coming up shortly!</string>
</resources>