<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/hockeyapp_text_white"
    xmlns:android="http://schemas.android.com/apk/res/android" >




   <ScrollView
       android:layout_width="match_parent"
       android:layout_above="@+id/buttons"
       android:layout_alignParentTop="true"
       android:paddingBottom="10dp"
       android:id="@+id/sv_content"
       android:background="#ebedef"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="match_parent">

           <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:id="@+id/content"
           android:layout_weight="1"
           android:layout_height="0dp">


               <LinearLayout
                   android:layout_width="match_parent"
                   android:orientation="horizontal"

                   android:id="@+id/ll_credit"
                   android:layout_height="40dp">

               <!--    <ProgressBar
                       android:id="@+id/progress_bar"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@android:style/Widget.ProgressBar.Small"
                       android:layout_gravity="center"/>-->
           <TextView
           android:id="@+id/buy_content"
           android:layout_width="0dp"
           android:textSize="16sp"
           android:layout_weight="1"
           android:text="Karma: 30"
           android:gravity="center_vertical"
           android:paddingLeft="20dp"
           android:layout_margin="5dp"
           android:textColor="#53595d"
           android:layout_height="match_parent" />



                   <TextView
                       android:id="@+id/get_more"
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:gravity="center"
                       android:textSize="16sp"
                       android:layout_margin="5dp"
                       android:text="@string/more_karma"
                       android:textColor="#53595d"
                       android:layout_height="match_parent" />

               </LinearLayout>



       <TextView
           android:id="@+id/buy_content1"
           android:layout_width="match_parent"
           android:textSize="16sp"
           android:paddingLeft="20dp"
           android:textColor="#53595d"
           android:background="@color/hockeyapp_text_white"
           android:layout_marginTop="10dp"
           android:paddingTop="10dp"
           android:text="@string/karma_content"
           android:layout_height="wrap_content" />

     <LinearLayout

    android:layout_below="@+id/buy_content1"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:scrollbars="horizontal"
    android:background="@color/hockeyapp_text_white"
    android:paddingBottom="30dp"
    android:layout_height="wrap_content">


       <TextView
           android:id="@+id/buy_content2"
           android:layout_width="match_parent"
           android:textSize="14sp"
           android:textColor="#9b9b9b"
           android:singleLine="true"
           android:ellipsize="end"
           android:drawableLeft="@drawable/ic_bullet"
           android:drawablePadding="2dp"
           android:text="@string/karma_content1"
           android:layout_height="wrap_content" />




       <TextView
           android:id="@+id/buy_content3"
           android:drawableLeft="@drawable/ic_bullet"
           android:singleLine="true"
           android:layout_width="match_parent"
           android:textSize="14sp"
           android:drawablePadding="2dp"
           android:textColor="#9b9b9b"
           android:layout_marginTop="16sp"
           android:text="@string/karma_content2"
           android:layout_height="wrap_content" />

         <TextView
             android:id="@+id/buy_content4"
             android:drawableLeft="@drawable/ic_bullet"
             android:singleLine="true"
             android:layout_width="match_parent"
             android:textSize="14sp"
             android:drawablePadding="2dp"
             android:textColor="#9b9b9b"
             android:layout_marginTop="16sp"
             android:text="@string/karma_content3"
             android:layout_height="wrap_content" />



     </LinearLayout>


           </LinearLayout>



           <LinearLayout
               android:layout_width="match_parent"
               android:background="#ebedef"
               android:id="@+id/op_credit"
               android:paddingBottom="20dp"
               android:paddingTop="80dp"
               android:orientation="vertical"
               android:layout_weight="1"

               android:layout_height="0dp">


               <Button
                   android:layout_width="match_parent"
                   android:id="@+id/pay1"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:text="120 Karmas for $10 "
                   android:textAllCaps="false"
                   android:textColor="@color/hockeyapp_text_white"
                   android:background="@drawable/button_selector1"
                   android:layout_marginTop="10dp"
                   android:layout_height="wrap_content" />

               <Button
                   android:layout_width="match_parent"
                   android:id="@+id/pay3"
                   android:layout_marginLeft="20dp"
                   android:text="10 Karmas for $1"
                   android:textColor="@color/hockeyapp_text_white"
                   android:layout_marginRight="20dp"
                   android:background="@drawable/button_selector1"
                   android:layout_marginTop="10dp"
                   android:layout_height="wrap_content" />
               <Button
                   android:layout_width="match_parent"
                   android:background="@drawable/button_selector1"
                   android:id="@+id/pay2"
                   android:text="55 Karmas for $5 "
                   android:textColor="@color/hockeyapp_text_white"
                   android:layout_marginLeft="20dp"
                   android:layout_marginRight="20dp"
                   android:layout_marginTop="10dp"
                   android:layout_height="wrap_content" />

           </LinearLayout>



       </LinearLayout>


   </ScrollView>


       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:gravity="center"
           android:id="@+id/buttons"
           android:layout_above="@+id/back"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="50dp"
           android:layout_height="wrap_content">





       </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:id="@+id/back"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom_panel"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:id="@+id/backview"
                android:background="@drawable/ic_bar_back"
                />
            <View
                android:id="@+id/black_view"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="#ff252525"
                android:layout_weight="3"></View>

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
