<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">

    <org.osmdroid.views.MapView

        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/navigation"
        android:layout_above="@+id/navigation_option"

        ></org.osmdroid.views.MapView>
        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/navigation"
            android:orientation="horizontal"
            android:background="@color/header"
            android:layout_gravity="left|top">

            <Button
                android:textSize="14dp"
                android:textColor="#ffffff"
                android:id="@+id/cancel_button"
                android:background="@drawable/bar_selector"
                android:paddingLeft="3dp"
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textStyle="bold"/>

            <View
                android:layout_gravity="center_vertical"
                android:background="#c9c9c9"
                android:layout_width="1px"
                android:layout_height="28dp" />


            <TextView
                android:textSize="14dp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/edit"
                android:text="@string/AttachLocation"
                android:textStyle="bold"/>


            <View
                android:layout_gravity="center_vertical"
                android:background="#c9c9c9"
                android:layout_width="1px"
                android:layout_height="28dp"
                android:id="@+id/divide_right"/>


            <Button
                android:textSize="14dp"
                android:textColor="#ffffff"
                android:id="@+id/share_location"
                android:background="@drawable/bar_selector"
                android:paddingLeft="3dp"
                android:text="@string/Send"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textStyle="bold"/>
       </LinearLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="91dp"
            android:layout_above="@+id/map_view"
            android:background="@drawable/location_panel"
            android:id="@+id/location_bottom_view"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <org.telegram.ui.Components.BackupImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/location_avatar_view"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:textColor="#000000"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="12dp"
                android:id="@+id/location_name_label"
                android:layout_gravity="top"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="52dp"
                android:layout_marginRight="12dp"
                android:textColor="#999999"
                android:id="@+id/location_distance_label"
                android:layout_gravity="top"
                android:maxLines="1"/>

        </FrameLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:background="@color/gallery_background_color"
        android:id="@+id/navigation_option"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_nav_to"
        android:layout_alignParentStart="true"></ImageView>



</RelativeLayout>