<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffffff">
    <ProgressBar
        android:id="@+id/pb_load"
        android:layout_width="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="#ffffff"
        android:layout_height="50dp" />
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="100dp"
        android:scrollbars="vertical"
        ><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"

            android:background="#ffffff"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_below"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="clip_horizontal"
                android:textColor="#999898"
                android:layout_marginTop="10dp"
                android:text="@string/preferences_contant"
                /> </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_plus_signin_btn_text_dark_disabled"/>

        />
            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
               <TextView
                   android:id="@+id/id_location_txt"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Delhi"
                   android:textColor="@color/black"/>
                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/AttachLocation"
                     android:textColor="#999898"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_plus_signin_btn_text_dark_disabled"/>
        />
            <LinearLayout
                android:id="@+id/gender_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/gender_txt"
                    android:layout_width="wrap_content"
                    android:text="Male"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/id_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#999898"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F1F0F0"/>

           <!-- <LinearLayout
                android:id="@+id/age_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/age_taxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18-25"
                    android:textColor="#999898"/>
            </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:text="@string/age_group"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/minValue1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="min"
                    android:paddingLeft="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "/>
                <TextView
                    android:id="@+id/maxValue1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="max" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_age_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical" >

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_plus_signin_btn_text_dark_disabled"/>

        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_alignParentBottom="true"
           >
            <Button
                android:id="@+id/id_btn_preferences"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/header"
                android:gravity="center"

                android:layout_marginBottom="10dp"
                android:textColor="#ffffff"
                android:text="SEARCH NOW"
                />
        </LinearLayout>

   <!--     android:background="@drawable/button_selector1"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom_panel"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:id="@+id/backview"
                android:background="@drawable/ic_bar_back"
                />
            <View
                android:id="@+id/black_view"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="#ff252525"
                android:layout_weight="3"></View>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>